# webshell

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  main.rs
certs/: CrypterClient.cer  CrypterServer.cer
data/: .gitignore  db.sqlite
examples/: com.rusty.daemon.plist  crypt.rs  db.rs  kafka.rs  orm.rs  threads.rs
src/: lib.rs
src/controllers/: mod.rs
src/models/: cert.rs  certificate.rs  mod.rs
src/utils/: crypt.rs  mod.rs
tests/: test.rs
